--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "js2xmlparser": "^4.0.2",
+    "json-to-html": "^0.1.2",
+    "json-to-plain-text": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
