--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "testwatch": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +32,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.1",
-    "jest-mock-req-res": "^1.0.2",
+    "node-mocks-http": "^1.11.0",
     "prettier": "^2.7.0"
   },
   "jest": {
